istio/destination-rule-all-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app-four
spec:
  host: "*"
  subsets:
  - name: v1
    labels:
      version: v1
