istio/virtual-service-all-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-four
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - name: app-four
    match:
    - uri:
        prefix: /app-four/
    rewrite:
      uri: /
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream
    route:
    - weight: 80
      destination:
        host: app-four.services.svc.cluster.local
        subset: v1
        port:
          number: 80      
    - weight: 10
      destination:
        host: app-four-v2.services.svc.cluster.local
        subset: v2
        port:
          number: 80
    - weight: 10
      destination:
        host: app-four-v3.services.svc.cluster.local
        subset: v3
        port:
          number: 80
